# webGPT

./: .dockerignore  .gitignore  Dockerfile  README.md  app.db  main.py  pyproject.toml
db/: db.py  models.py  schemas.py  security.py
front/: index.html  script.js  styles.css
tests/: test_api.py
